examples/test/testpolicy3633.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy3633
  namespace: namespace281
spec:
  podSelector:
    matchLabels:
      key18: value41
      key28: value9
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key13: value16
      podSelector:
        matchLabels:
          key5: value23
          key4: value7
          key46: value9
